[gd_scene load_steps=5 format=3 uid="uid://baae0eawv1yjh"]

[ext_resource type="SpriteFrames" uid="uid://cmexh3jfl0hxh" path="res://res/sprite_frames/whale.tres" id="2_6fcso"]
[ext_resource type="Script" uid="uid://cucubuoeubail" path="res://classes/Whale.gd" id="2_uc2lw"]
[ext_resource type="Script" uid="uid://fuedmpmi61nj" path="res://classes/StateMachine.gd" id="4_mle7i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vkffm"]
size = Vector2(61, 42)

[node name="Whale" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("2_uc2lw")

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_mle7i")
metadata/_custom_type_script = "uid://fuedmpmi61nj"

[node name="Graphics" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="Graphics"]
sprite_frames = ExtResource("2_6fcso")
animation = &"run"
autoplay = "idle"

[node name="RayCast" type="RayCast2D" parent="Graphics"]
rotation = 1.5707964
target_position = Vector2(0, 36)
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_vkffm")
